typescript/checker/tests/conformance/parser/ecmascript5/ErrorRecovery/SourceUnits/parserErrorRecovery_SourceUnit1.ts.stderr
error: Unexpected token Some(RBrace)
 --> $DIR/tests/conformance/parser/ecmascript5/ErrorRecovery/SourceUnits/parserErrorRecovery_SourceUnit1.ts:3:1
  |
3 | }
  | ^

